--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Prakhar Srivastav</title>
+    <title>fc@aliyun $ </title>
+    <link rel="icon" type="image/png" href="https://img.alicdn.com/tfs/TB1M2X_QVXXXXXmXpXXXXXXXXXX-72-73.png">
     <link rel="stylesheet" href="http://getskeleton.com/dist/css/normalize.css">
     <link rel="stylesheet" href="http://getskeleton.com/dist/css/skeleton.css">
     <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
@@ -34,14 +35,14 @@
       }
       input[type=text], input[type=text]:focus {
         border: none;
-        padding: 0; 
+        padding: 0;
         margin: 0;
         height: 22px;
         background: #2b303b;
         color: #ebcb8b;
         width: 80%;
       }
-      p { 
+      p {
         margin-bottom: 0;
         line-height: 21px;
       }
