--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
         background: #343d46;
       }
       #app, div.input-area {
-        height: 100%;
+        height: 400px;
+        width: 100%;
       }
       div#main {
           max-width: 560px;
           background: #2b303b;
-          border-radius: 5px;
+          border-radius: 0px 0px 5px 5px;
           height: 400px;
           -webkit-box-shadow: 0px 0px 13px 0px rgba(50, 50, 50, 0.59);
           -moz-box-shadow:    0px 0px 13px 0px rgba(50, 50, 50, 0.59);
@@ -50,10 +51,10 @@
         height: 30px;
         max-width: 560px;
         background: black;
-        border-radius: 5px;
+        border-radius: 5px 5px 0px 0px;
       }
       #content {
-        padding: 20px;
+        padding: 0px 0px 0px 4px;
         height: 100%;
       }
     </style>
@@ -67,7 +68,7 @@
         </svg>
       </div>
     <div class="container" id="main">
-      <div class="holder">
+      <div class="holder" id="holder">
         <div id="content">
           <div id="app"></div>
         </div>
