fork me on github

--- a/index.html
+++ b/index.html
@@ -60,20 +60,23 @@
     </style>
 </head>
 <body>
-      <div id="bar" class='container'>
-        <svg height="20" width="100">
-          <circle cx="24" cy="14" r="5" fill="#bf616a" />
-          <circle cx="44" cy="14" r="5" fill="#ebcb8b" />
-          <circle cx="64" cy="14" r="5" fill="#a3be8c" />
-        </svg>
-      </div>
-    <div class="container" id="main">
-      <div class="holder" id="holder">
-        <div id="content">
-          <div id="app"></div>
-        </div>
+  <a href="https://github.com/awesome-fc/give-me-a-shell-web">
+    <img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" />
+  </a>
+  <div id="bar" class='container'>
+    <svg height="20" width="100">
+      <circle cx="24" cy="14" r="5" fill="#bf616a" />
+      <circle cx="44" cy="14" r="5" fill="#ebcb8b" />
+      <circle cx="64" cy="14" r="5" fill="#a3be8c" />
+    </svg>
+  </div>
+  <div class="container" id="main">
+    <div class="holder" id="holder">
+      <div id="content">
+        <div id="app"></div>
       </div>
     </div>
-    <script type="text/javascript" src="build/main.min.js"></script>
+  </div>
+  <script type="text/javascript" src="build/main.min.js"></script>
 </body>
 </html>
